test-data/unit/check-commented-type-annotations.test
[case testCommentedTypeAnnotations]
# flags: --allow-commented-type-annotations

class A():
    b = ""
# type: str


[case testIncorrectTypeAnnotations]
# flags: --allow-commented-type-annotations

class A():
    b: int = ""
# type: str
[out]
main:4: error: Incompatible types in assignment (expression has type "str", variable has type "int")

[case testCommentedTypeAnnotationsWithVal]
# flags: --allow-commented-type-annotations

# type: str = "hello"
class A():
    b = ""
# type: str 

[case testCommentedTypeAnnotationsWithoutFlag]

# type: str = "hello"
class A():
    b = ""
# type: str 
[out]
main:2: error: invalid syntax

[case testCommentedTypeAnnotationsNotAtStart]
# flags: --allow-commented-type-annotations

class A():
    b = "" # type: str
# type: str
